--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-carousel": "^0.12.0",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-heroicons": "^3.2.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-pagination": "^1.5.5",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
