--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
+    "deps": "^1.0.0",
     "expo": "~51.0.28",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
@@ -24,7 +25,9 @@
     "react-native-progress": "^5.0.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-screens": "^3.31.1",
-    "react-native-snap-carousel": "^4.0.0-beta.6"
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "^15.2.0",
+    "react-native-webview": "^13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
